# craft

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  config.yaml
.githooks/: pre-hook
.github/workflows/: basic.yml  cd.yml  ci.yml
.sqlx/: query-087d6e6eba48e0bb1a8024fad170c84defb11c53de16db1aa311ada49e1d3762.json  query-1156bad2e6028f104f4c913b99c94f3891b9d12656971db19508871ee4ad393f.json  query-1ae8f365480bfcce9e350264d4cd5be79240fb3c2da842e7df33fd7f2fbbc545.json  query-252620705a90a720efc62997d3c3f176c1706f3ea4869adeab92c2e73a8fc930.json  query-3eb43044c29d3abfc78990eb0771afd29cf8c65bbe93a71ae1cc765f68e518c0.json  query-4c460115a55bf81c4b6b8f90d33f3cbd296beadc2734225f5bd49ddaaed18d80.json  query-4d6221832c898343cc1bf58a7890843278064a1250f0cb46d8f6a9a057d5bd63.json  query-611d30f4d97e6e22ee8a165556b20617ed89db7e2c7391e2cbb8ddc66a8085fe.json  query-760ce3bedf989b654ad8a58dbb85381bdd6cbc55c667d9e5325af02e6a9ba606.json  query-7901dc78d11d33db251a88bb74c02be1cff5b9ab87c4742bff58e775d31a7821.json  query-ac64f0bdd0961c226366c0df53f14ac7d1ea0078dfbc77bb35f669666bc8df39.json  query-b0bd87e0c87d6138e6248f61b1ea77240de7be201140c9fd768bda6d335933f0.json  query-d15f75e9f3fa3a86e9a6608de79b659f2487c545c0ec44b3fb936ebce1b53c3d.json  query-d2db914863dc84474bc6a42822a748216ac720fb27825c9b12e0667fab4a2d0e.json  query-d79fb4ddf76c759a168c73af13bb31959fddbf638e11723e4d0cdaf2a3de24bc.json  query-ebf130e3ad898bd4b446dd50fb0e2be29d69357f7c3059fcf019678cdf329dee.json
configurations/: base.yaml  local.yaml  production.yaml
migrations/: 20250711083609_create_subscriptions_table.sql  20251006075835_status_not_null_in_subscriptions.sql  20251006080959_create_subscription_token_table.sql  20251112091125_add_salt_to_users.sql  20251130113016_seed_user.down.sql  20251130113016_seed_user.sql  20260110122114_create_idempotency_table.down.sql  20260124041438_create_newsletter_issues_table.sql  20260124052051_create_issue_delivery_queue_table.sql  20260128142157_add_n_retries_and_execute_after_to_issue_delivery_queue.sql
scripts/: init_db.sh  init_redis.sh
src/: app_state.rs  authentication.rs  background_workers.rs  configuration.rs  domain.rs  email_client.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  routers.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/background_workers/: idempotency_expire_wroker.rs
src/domain/: subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routers/: admin.rs  health_check.rs  home.rs  login.rs  newsletters.rs  session_state.rs  subscriptions.rs
src/routers/admin/: dashboard.rs  logout.rs  newsletters.rs
src/routers/login/: get.rs  post.rs
tests/: ci.rs  health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helper.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confim.rs
(+4 files in other folders)
