[package]
name = "craft"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
claim = "0.5.0"
config = "0.15.13"
dotenvy = "0.15.7"
log = "0.4.27"
once_cell = "1.21.3"
rand = { version = "0.9.2", features=["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12.22", default-features = false,features = ["json", "rustls-tls"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

[dev-dependencies]
fake = "4.4.0"
linkify = "0.10.0"
maplit = "1.0.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.5"
